--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -1,4 +1,4 @@
 prop.driverClass=com.mysql.jdbc.Driver
-prop.url=jdbc:mysql://localhost:3360/usrDb
+prop.url=jdbc:mysql://localhost:3306/user_db
 prop.userName=root
 prop.password=root
